src/core-crm/objects/Field_Layout_Setting__mdt/Field_Layout_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Manages usage of fields on custom UI development.</description>
    <label>Field Layout Setting</label>
    <pluralLabel>Field Layout Settings</pluralLabel>
</CustomObject>