src/core-crm/objects/Field_Layout_Setting__mdt/fields/Field_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Field_Dependency__c</fullName>
    <description>Field Value that controls the page layout.</description>
    <label>Field Dependency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>