src/core-crm/objects/Field_Layout_Setting__mdt/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <description>Long Section Label</description>
    <label>Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>