src/core-crm/objects/Field_Layout_Setting__mdt/fields/Single_Column__c.field-meta.xml
<CustomField>
    <fullName>Single_Column__c</fullName>
    <description>Fields that are on a single column in a form.</description>
    <inlineHelpText>Must be in JSON format. With the following attributes: field,mandatory,isrecordtype. (attribute not needed when false) e.g
[{&quot;field&quot;:&quot;OwnerId&quot;},{&quot;field&quot;:&quot;Product_Request_Status__c&quot;,&quot;mandatory&quot;:true},{&quot;field&quot;:&quot;RecordTypeId&quot;,&quot;isrecordtype&quot;:true}]</inlineHelpText>
    <label>Single Column</label>
    <length>255</length>
    <type>Text</type>
</CustomField>